# slaps

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml  grcov.yml
benches/: shlex.rs
examples/: readline.rs
src/: clap.rs  config.rs  error.rs  lib.rs  readline.rs  shlex.rs
