[package]
authors = ["rd <slaps@megane.space>"]
categories = ["command-line-utilities"]
description = "Interactive shell interface using your existing Clap/StructOpt config"
edition = "2018"
keywords = ["cli", "interactive", "clap", "structopt"]
license = "WTFPL"
name = "slaps"
readme = "README.md"
repository = "https://github.com/tjg1/slaps"
version = "0.2.0"

[dependencies]
lazy_static = "^1.4.0"
regex = "^1.3.9"

[dev-dependencies]
rusty-hook = "^0.11.2"

[profile.bench]
debug = true