[package]
authors = ["rd <slaps@megane.space>"]
categories = ["command-line-utilities"]
description = "Interactive shell interface using your existing Clap/StructOpt config"
edition = "2018"
keywords = ["cli", "interactive", "clap", "structopt"]
license = "WTFPL"
name = "slaps"
readme = "README.md"
repository = "https://github.com/tjg1/slaps"
version = "0.2.0"

[dependencies]
clap = "^2.33.1"
lazy_static = "^1.4.0"
itertools = "^0.9.0"
regex = "^1.3.9"
rpassword = "^4.0.5"
rustyline = "^6.2.0"

[target.'cfg(unix)'.dependencies]
nix = "^0.17.0"

[profile.bench]
debug = true

